--- a/index.html
+++ b/index.html
@@ -61,6 +61,14 @@
                 <div class="navbar-nav w-100">
                     <a href="index.html" class="nav-item nav-link active"><i class="fa fa-tachometer-alt me-2"></i>Dashboard</a>
                     <div class="nav-item dropdown">
+                        <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i class="fa fa-laptop me-2"></i>Quản lý chung</a>
+                        <div class="dropdown-menu bg-transparent border-0">
+                            <a href="product_manager.html" class="dropdown-item">Quản lý mặt hàng</a>
+                            <a href="user_manager.html" class="dropdown-item">Quản lý người dùng</a>
+                            <a href="category_manager.html" class="dropdown-item">Quản lý danh mục</a>
+                        </div>
+                    </div>
+                    <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i class="fa fa-laptop me-2"></i>Elements</a>
                         <div class="dropdown-menu bg-transparent border-0">
                             <a href="button.html" class="dropdown-item">Buttons</a>
